# mitsuakyBot

./: .dockerignore  .env.exemple  .gitignore  Dockerfile  Justfile  README.md  bot.py  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  settings.toml
.github/workflows/: docker-image.yml
cogs/: invite.py  karma.py  mover.py
postgres/: Dockerfile  schema.sql
prisma/: schema.prisma
src/: main.py
src/cogs/: invite.py  karma.py  mover.py  tarot.py
src/core/: config.py  log.py  settings.py
utils/: config.py  context.py  logging.py
