[tool.poetry]
package-mode = false
name = "mitsuakybot"
version = "0.1.0"
description = "Personal Discord bot for servers I like"
authors = ["Pármenas Haniel <parmenashp@gmail.com>"]
license = "GPL-3.0-only"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
"discord.py" = "^2.4.0"
loguru = "^0.6.0"
tomli = "^2.0.1"
jishaku = {git = "https://github.com/Gorialis/jishaku.git", rev = "0c16ddc"}
prisma = "^0.12.0"
pillow = "^10.3.0"
toml = "^0.10.2"
pydantic-settings = "^2.4.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[tool.black]
line-length = 119

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
